[package]
name = "client"
version = "0.4.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
crc-fast = "1.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"]}
dashmap = "6.1.0"
tabled = "0.20.0"
